crimtrac_theme/css/styles.css
/* ... */
@media (min-width: 980px) {
  #block-menu-block-govcms-menu-block-footer .menu-block-govcms_menu_block-footer > ul > li {
    width: auto;
    margin-bottom: 0;
  }
}

#block-menu-menu-footer-sub-menu {
  background: #005f8b;
  color: #fff;
}
#block-menu-menu-footer-sub-menu a, #block-menu-menu-footer-sub-menu a:visited {
  color: #fff;
}
#block-menu-menu-footer-sub-menu ul > li {
  width: 100%;
}
#block-menu-menu-footer-sub-menu ul > li a {
  padding-left: 0;
}
#block-menu-menu-footer-sub-menu ul > li a:before {
  display: none;
}
@media (min-width: 420px) {
  #block-menu-menu-footer-sub-menu ul > li {
    width: 50%;
  }
}
@media (min-width: 720px) {
  #block-menu-menu-footer-sub-menu ul > li {
    width: 33%;
  }
}
@media (min-width: 980px) {
  #block-menu-menu-footer-sub-menu ul > li {
    width: auto;
  }
  #block-menu-menu-footer-sub-menu ul > li a {
    padding-left: 0.7em;
  }
  #block-menu-menu-footer-sub-menu ul > li a:before {
    display: block;
  }
}

.menu-block-govcms_menu_block-footer > ul > li a, .menu-block-govcms_menu_block-footer > ul > li a:visited {
  text-decoration: none;
}
.menu-block-govcms_menu_block-footer > ul > li a:hover {
  text-decoration: underline;
}

.home #page-title {
  display: none;
}
.home .region-sidebar-second {
  display: none;
}

#header {
  height: 192px;
}

.header__logo {
  max-width: 535px;
  width: 80%;
  height: 77px;
}
@media (min-width: 720px) {
  .header__logo {
    margin-top: 67px;
  }
}
.lt-ie9 .header__logo {
  margin-top: 67px;
}
.header__logo .au-mark {
  width: 20%;
  height: 100%;
  float: left;
}
.header__logo .au-mark > span {
  background: url("../images/au-brand.png") no-repeat;
  background-size: contain;
  display: block;
  width: 100%;
  height: 100%;
}
.header__logo .header__logo-image {
  width: 67%;
  float: right;
}

@media (max-width: 979px) {
  .header .block-govcms-text-resize {
    position: absolute;
    right: 215px;
    bottom: -38px;
    z-index: 100;
  }
}
@media (max-width: 979px) {
  .header .block-search-api-page {
    position: absolute;
    right: 0px;
    bottom: -34px;
    z-index: 100;
  }
}

.field-name-field-info-graphic {
  margin-top: 30px;
}

#block-views-infographics-block {
  width: 100%;
  background: white;
  padding: 20px;
}
#block-views-infographics-block .views-row {
  border: none;
  padding: 0;
  margin: 0;
}
#block-views-infographics-block img {
  margin: auto;
}
@media (min-width: 720px) {
  #block-views-infographics-block {
    position: relative;
    top: -450px;
    width: 30%;
    float: left;
    padding: 0;
  }
}

@media (min-width: 720px) {
  #main #block-views-infographics-block {
    margin-bottom: -450px;
  }
}
.view-job-listing .field-name-field-classification,
.view-job-listing .field-name-field-job-permanency,
.view-job-listing .field-name-field-job-type {
  display: inline-block;
}
.view-job-listing .field-name-field-classification .field-items > div:after,
.view-job-listing .field-name-field-job-permanency .field-items > div:after,
.view-job-listing .field-name-field-job-type .field-items > div:after {
  content: "|";
  color: transparent;
  border-right: 1px solid #5f5f5f;
  display: inline-block;
  line-height: 1;
  margin-right: 5px;
  margin-left: 5px;
  width: 0;
}
.view-job-listing .field-name-field-classification:last-child .field-items > div:after,
.view-job-listing .field-name-field-job-permanency:last-child .field-items > div:after,
.view-job-listing .field-name-field-job-type:last-child .field-items > div:after {
  display: none;
}

.brick-notice {
  color: #b22222;
}

.page-current-status-of-recruitment-processes .view-footer {
  margin-top: 100px;
}
.page-current-status-of-recruitment-processes table {
  width: 100%;
}
.page-current-status-of-recruitment-processes table caption {
  color: #135286;
  font-size: 1.2rem;
  margin-top: 2rem;
  margin-bottom: 1rem;
  text-align: left;
}
.page-current-status-of-recruitment-processes table th {
  width: 30%;
}
.page-current-status-of-recruitment-processes table th.views-field-title {
  width: 40%;
}

#block-views-job-listing-block {
  background: #fff;
  padding: 20px;
}
#block-views-job-listing-block h2 {
  font-size: 2.5rem;
  color: #135286;
  border-bottom: 10px solid #8dd6f7;
  padding-bottom: 10px;
}
#block-views-job-listing-block h3 a, #block-views-job-listing-block h3 a:visited {
  color: #135286;
  text-decoration: none;
}
#block-views-job-listing-block h3 a:hover {
  text-decoration: underline;
}
#block-views-job-listing-block .date-display-single {
  color: #8dd6f7;
}
#block-views-job-listing-block .view-content {
  height: 494px;
  overflow: hidden;
}
#block-views-job-listing-block .views-row {
  border: none;
  margin: 1.5em 0 0 0;
  padding: 0;
  border-bottom: 1px solid #ccc;
}
#block-views-job-listing-block .more-link {
  padding: 9px 0;
}
#block-views-job-listing-block .more-link a, #block-views-job-listing-block .more-link a:visited {
  background: #135286;
  color: #fff;
  padding: 4px 5px;
  text-decoration: none;
}
#block-views-job-listing-block .field-name-field-job-permanency {
  float: left;
  clear: left;
}
#block-views-job-listing-block .field-name-field-job-type {
  float: left;
  margin-left: 10px;
}
#block-views-job-listing-block .field-name-field-classification {
  margin-bottom: 0;
}
@media (min-width: 720px) {
  #block-views-job-listing-block {
    width: 32%;
    height: 605px;
    float: left;
    margin: 0 0 0 1.5%;
  }
}

#block-block-11 {
  background: #135286;
  color: #fff;
  padding: 20px;
  position: relative;
  font-size: 1.6rem;
  line-height: 1.5;
}
#block-block-11 p {
  margin: 0;
}
#block-block-11 .button {
  background: #fff;
  color: #135286;
  position: absolute;
  bottom: 20px;
  right: 20px;
  font-size: 1rem;
}
@media (min-width: 720px) {
  #block-block-11 {
    width: 67%;
    min-height: 138px;
    float: left;
    margin: 0 0 0 1.5%;
  }
}

.region-navigation {
  background: #135286;
  display: block;
  height: 40px;
  margin-bottom: 30px;
  padding: 7px;
}
/* ... */

